--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos, windows]
+        os: [macos]
         python-version: ['3.6', '3.7', '3.8', '3.9']
         exclude:
           - os: macos
