--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -224,7 +224,7 @@ jobs:
         CIBW_SKIP: '*-win32'
         CIBW_PLATFORM: '${{ matrix.platform || matrix.os }}'
         CIBW_BEFORE_BUILD: 'pip install -U cython'
-        CIBW_BEFORE_TEST: 'pip install --user --index-url https://pypi.org/simple "atomicwrites (>=1.0) ; sys_platform==\"win32\""'
+        CIBW_BEFORE_TEST: 'pip install --index-url https://pypi.org/simple "atomicwrites (>=1.0) ; sys_platform==\"win32\""'
         CIBW_TEST_REQUIRES: 'pytest==6.2.2 pytest-mock==3.5.1'
         CIBW_TEST_COMMAND: 'pytest {project}/tests'
         CIBW_MANYLINUX_X86_64_IMAGE: 'manylinux2014'
