--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -187,7 +187,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu , macos , windows]
+        os: [ubuntu , macos-13 , windows]
         python-version: ['6', '7', '8', '9']
         include:
         - os: ubuntu
