--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -187,7 +187,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest , macos-13 , windows-latest]
+        os: [ubuntu , macos , windows]
         python-version: ['6', '7', '8', '9']
         include:
         - os: ubuntu
@@ -195,7 +195,7 @@ jobs:
         - os: windows
           ls: dir
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os == 'macos' && 'macos-13' || format('{0}-latest', matrix.os) }}
     steps:
     - uses: actions/checkout@v2
 
